Fixed Dark Mode button being a checkbox

--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,7 @@ body{
   }
   
   input:checked + .slider {
-    background-color: #170329;
+    background-color: #3d0442;
   }
   
   input:checked + .slider:before {
